Removal of LazySegmentTreeTest and comments